chore: remove unused notebooks

--- a/Notebooks/Clusters.ipynb
+++ b/Notebooks/Clusters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "24db7ade-273f-48f1-8b47-669341e88c07",
    "metadata": {},
    "outputs": [],
@@ -106,14 +106,16 @@
   {
    "cell_type": "markdown",
    "id": "b33d9cf3-d5dd-49cb-a964-2e2754602f61",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Wasabi2 clusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "22a7670e-9166-4571-b7d0-47ec9c16e74f",
    "metadata": {},
    "outputs": [
@@ -123,7 +125,12 @@
      "text": [
       "Collected 130908482 addresses\n",
       "Creating disjoint sets of size 130908482\n",
-      "Created disjoint sets of size 130908482\n"
+      "Created disjoint sets of size 130908482\n",
+      "Preparing to serialize cluster data\n",
+      "Serializing cluster data\n",
+      "Serialized\n",
+      "CPU times: user 20min 16s, sys: 2min 28s, total: 22min 45s\n",
+      "Wall time: 17min 50s\n"
      ]
     }
    ],
@@ -151,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "bad28f94-8005-4887-9147-de579a587ff3",
    "metadata": {},
    "outputs": [
@@ -159,17 +166,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.4 s, sys: 70.4 ms, total: 11.4 s\n",
-      "Wall time: 11.5 s\n",
-      "CPU times: user 8.28 s, sys: 1.76 s, total: 10 s\n",
-      "Wall time: 10.1 s\n",
-      "full 16279501\n",
-      "filtered 149160\n"
+      "CPU times: user 2min 23s, sys: 14.3 s, total: 2min 38s\n",
+      "Wall time: 2min 58s\n",
+      "CPU times: user 1min 25s, sys: 8.17 s, total: 1min 34s\n",
+      "Wall time: 1min 35s\n",
+      "full 130419702\n",
+      "filtered 182267\n"
      ]
     }
    ],
    "source": [
-    "ww2_clusterer = blocksci.cluster.CoinjoinClusterManager(\"/mnt/anal/clustering/wasabi2_out_threshold_change2/\", chain)\n",
+    "ww2_clusterer = blocksci.cluster.CoinjoinClusterManager(\"/mnt/anal/clustering/wasabi2_3hop/\", chain)\n",
     "%time ww2_clusters = [cluster for cluster in ww2_clusterer.clusters() if cluster.address_count() > 1]\n",
     "%time ww2_clusters_full = [cluster for cluster in ww2_clusterer.clusters()]\n",
     "print(\"full\", len(ww2_clusters_full))\n",
@@ -179,7 +186,9 @@
   {
    "cell_type": "markdown",
    "id": "aaef0909-f2d3-4d18-b669-996f4a34b642",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Whirlpool clusters\n",
     "`9ea3e5d217c76e6be6ace7fe4fb3622976103466de81d2b02cd87c54f9e91a2f` should have 21 clustered addresses by the simple one output heuristics\n",
@@ -267,7 +276,9 @@
   {
    "cell_type": "markdown",
    "id": "e2362a4e-d126-42fd-8520-d2b7d31743a4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Wasabi1 clustering\n"
    ]
@@ -446,7 +457,9 @@
   {
    "cell_type": "markdown",
    "id": "be9be73e-872a-4287-8c30-7a90d0bd3f18",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Other cluster statistics"
    ]
@@ -490,19 +503,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "29826bf6-18b2-4956-9f48-598536222926",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "| Pool               |   Total addresses collected |   Number of clusters |   Biggest cluster size |\n",
-      "|--------------------+-----------------------------+----------------------+------------------------|\n",
-      "| Wasabi Wallet 1    |                    10290298 |                96373 |                   2620 |\n",
-      "| Wasabi Wallet 2    |                    16759406 |               149160 |                    628 |\n",
-      "| Samourai Whirlpool |                     5138453 |                30938 |                   4344 |\n"
+     "ename": "NameError",
+     "evalue": "name 'ww1_clusters' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 8\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtabulate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tabulate\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(tabulate(\n\u001b[1;32m      4\u001b[0m     [\n\u001b[1;32m      5\u001b[0m         [\n\u001b[1;32m      6\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWasabi Wallet 1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m      7\u001b[0m             \u001b[38;5;241m10290298\u001b[39m,\n\u001b[0;32m----> 8\u001b[0m             \u001b[38;5;28mlen\u001b[39m(\u001b[43mww1_clusters\u001b[49m), \n\u001b[1;32m      9\u001b[0m             \u001b[38;5;28mmax\u001b[39m(ww1_clusters, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m c: c\u001b[38;5;241m.\u001b[39maddress_count())\u001b[38;5;241m.\u001b[39maddress_count()\n\u001b[1;32m     10\u001b[0m         ],\n\u001b[1;32m     11\u001b[0m         [\n\u001b[1;32m     12\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWasabi Wallet 2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m     13\u001b[0m             \u001b[38;5;241m16759406\u001b[39m,\n\u001b[1;32m     14\u001b[0m             \u001b[38;5;28mlen\u001b[39m(ww2_clusters), \n\u001b[1;32m     15\u001b[0m             \u001b[38;5;28mmax\u001b[39m(ww2_clusters, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m c: c\u001b[38;5;241m.\u001b[39maddress_count())\u001b[38;5;241m.\u001b[39maddress_count()\n\u001b[1;32m     16\u001b[0m         ],\n\u001b[1;32m     17\u001b[0m         [\n\u001b[1;32m     18\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSamourai Whirlpool\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m     19\u001b[0m             \u001b[38;5;241m5138453\u001b[39m,\n\u001b[1;32m     20\u001b[0m             \u001b[38;5;28mlen\u001b[39m(wp_clusters), \n\u001b[1;32m     21\u001b[0m             \u001b[38;5;28mmax\u001b[39m(wp_clusters, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m c: c\u001b[38;5;241m.\u001b[39maddress_count())\u001b[38;5;241m.\u001b[39maddress_count()\n\u001b[1;32m     22\u001b[0m         ],\n\u001b[1;32m     23\u001b[0m         \n\u001b[1;32m     24\u001b[0m     ],\n\u001b[1;32m     25\u001b[0m     headers\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPool\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal addresses collected\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of clusters\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBiggest cluster size\u001b[39m\u001b[38;5;124m\"\u001b[39m], \n\u001b[1;32m     26\u001b[0m     tablefmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124morgtbl\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     27\u001b[0m     )\n\u001b[1;32m     28\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ww1_clusters' is not defined"
      ]
     }
    ],
@@ -546,7 +559,13 @@
     "|--------------------+-----------------------------+----------------------+------------------------|\n",
     "| Wasabi Wallet 1    |                    10236857 |                96373 |                   2620 |\n",
     "| Wasabi Wallet 2    |                    15858241 |               149160 |                    628 |\n",
-    "| Samourai Whirlpool |                     5135482 |                30938 |                   4344 |"
+    "| Samourai Whirlpool |                     5135482 |                30938 |                   4344 |\n",
+    "----------------------------------------------------------------------------------------------------\n",
+    "| Pool               |   Total addresses collected |   Number of clusters |   Biggest cluster size |\n",
+    "|--------------------+-----------------------------+----------------------+------------------------|\n",
+    "| Wasabi Wallet 1    |                    10290298 |                96373 |                   2620 |\n",
+    "| Wasabi Wallet 2    |                    16759406 |               149160 |                    628 |\n",
+    "| Samourai Whirlpool |                     5138453 |                30938 |                   4344 |"
    ]
   },
   {
@@ -776,7 +795,9 @@
   {
    "cell_type": "markdown",
    "id": "8996fb83-9077-4747-b2a2-a858309a3a57",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Quick rundown"
    ]
@@ -1213,6 +1234,90 @@
     "plot_label_cluster_graph_interactions_hops(ww1_tagged_clusters1, ww1_tagged_clusters2, \"WW1\")\n",
     "plot_label_cluster_graph_interactions_hops(ww2_tagged_clusters1, ww2_tagged_clusters2, \"WW2\")\n",
     "plot_label_cluster_graph_interactions_hops(sw_tagged_clusters1, sw_tagged_clusters2, \"SW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3fa79956-6183-4a17-a100-3669c90b40ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "bc1qm2lp5dp08p34ul66d582qkfcyq9ceejhs0jpk0\n",
+      "bc1q8a7ls4p6qvk0ngxzdp6s3yjwkw7kmzktqgxzp4\n",
+      "bc1qdnfjqszu7c59pygyvchlkyu974c98nlxwm24ly\n",
+      "2\n",
+      "1MQwQcwBSEFwp4mqDDEf4w7WkTzhVsN85Y\n",
+      "bc1qml5hl6jp32z06728m2eculcsj2vayaevnpx58w\n",
+      "2\n",
+      "bc1qagslujfkynchcfzvw9uypwegupq7st9dezlaa2\n",
+      "bc1q4t65jqh5tdfvvh8xlgz2vye8lnn3ydk07shhht\n",
+      "26\n",
+      "bc1qwt3hg2pdlvcmgdalckkxvps64kep7dk3698mnc\n",
+      "bc1q9zf2r4zg4le9ayhsu2k2c3qvq28g0nlkf3x6fl\n",
+      "bc1qarcyn65x00zxjjd6uy9y4qrmzw98z2ujfx9l63\n",
+      "bc1qchnr6dayskle8hq65mmsgqk82kgpz3uz038a83\n",
+      "bc1qacwfle8a54dgrdrg09kmutyfamprztrswks40e\n",
+      "bc1q4pnuk2pqfk27jzk9q8x2hsq9k0sq8kcnv2cefv\n",
+      "bc1qcnzql8fx4mgw7q4g9peq90egvntd79qmkzfn82\n",
+      "bc1qkj0awjna9caq7aee2s592aqj8dp2700nyfypw0\n",
+      "bc1qef7xag9elsxwhu00y20maqajkkkk0pshx7j97d\n",
+      "bc1qf3ffntrtpz86y7jwce56eu3902a496hkp6aep3\n",
+      "bc1qg6fhu8c6newwrzzj5574txn6qzdg35un5ztfme\n",
+      "bc1qyfprf45hpj7utjfdcpzp5m2wwekc44sjr2qp34\n",
+      "bc1qvngqxhvcdnwehn4c4922l09yp083s5h7fkkd4q\n",
+      "bc1qdgzn3vl6mmr4ch9en7emc9hdd9zy3vf9r59wk5\n",
+      "bc1qarhzrs9578pau7vqlpe92ntqxjppcy5hqwdmhf\n",
+      "bc1qr9wnaxl8pzd3krf7cedd9we96utkp5dkwsaude\n",
+      "bc1q6474pr6xmcrkce54esv6dtnjst7a7qf9xr33q4\n",
+      "bc1qpxq8z59gfsq3xd95q3w223r873m9tt6vyjp5e9\n",
+      "bc1qfnwcp744wmct97wffnjgyqjg9zgmchu4ekjt94\n",
+      "bc1q6tvphnhp3p4qhslzxtzfvdzlkgarnppuzatrcq\n",
+      "bc1qpzqghm7xsy9xpyhz0cmtufzcheln8duhf272xp\n",
+      "bc1q95qh7gg3dpk3yxs77az7s44c7ylry6r6cvyg9f\n",
+      "bc1qdlncj4vs9mrdj09t9q5ahxnv9v0nzcrd0wqkzh\n",
+      "bc1q3llj906qdxzue89rsv9xfhnzdeln7w6qypcljv\n",
+      "bc1q6srzfr9wvndwj0ned2t9tz84yqxyn58e3zl8jw\n",
+      "bc1q4zags0w4cmugr8xwvtkdf3slt0wxdhgzyay3ah\n",
+      "3\n",
+      "bc1qcmm43pl5fekesadvw5cwl3dvqwcdnyxs8wvt85\n",
+      "bc1qcqrj5e2lfv5jg3fvnlpv5tps4ss8eyc50t74dv\n",
+      "bc1qm7z8avps2dhua22ps2jauu5ma7v5l2zx44jzgs\n",
+      "2\n",
+      "bc1q0zw75qxr76c4ry5s237dec0qn0cllfc0easg57\n",
+      "bc1qfcev9v5f9zuchr273h0cta5kj094092dasxwkl\n",
+      "2\n",
+      "13oBQztvBx8jdqcB71DEbvWNNf4tnjZrqD\n",
+      "bc1qr6kpg2hkxp96a3ex8jlylqsju4j3xewzj2z4hx\n",
+      "2\n",
+      "bc1ql8rvy9ng2fy40wtr8s3t7nk43xu2yqj32kx097\n",
+      "bc1qrycrp6j6f79yrju8dpxujmrz8hvxln2dtv3pv7\n",
+      "7\n",
+      "bc1qvqmafl6856qx4d07vx5sc5jetatjh63fsuj02w\n",
+      "bc1q46e4el7g9av3l0l66yhm6ja3a9prdtyv7hyfha\n",
+      "bc1qchfhkh7am0uwlh343lrrm0pwl4f36ltzfpua83\n",
+      "bc1quz9rgzzcafq4x5wdnzmc6ed9c7zwmcm575jcy3\n",
+      "bc1qwgq4mlne2aeagdxy4dvrpxj259asulc955ad0n\n",
+      "bc1q5c0udyc5wnpgyc6fmjdknlgdprgepqn7080uhm\n",
+      "bc1qdqjn6xwymjda0n86wyskt5drlshqauvpesuu66\n",
+      "2\n",
+      "bc1qk8n98229u36z0fl6h2f4ah7qfqurgkdh9g20af\n",
+      "bc1qalmhq3lf6wfz2q8qzhlhaljt40nhsqz5jqq82p\n"
+     ]
+    }
+   ],
+   "source": [
+    "wp_clusterer = blocksci.cluster.CoinjoinClusterManager(\"/mnt/anal/clustering/whirlpool_1hops/\", chain)\n",
+    "sw_clusters_bigger = [cluster for cluster in wp_clusterer.clusters() if cluster.address_count() > 1]\n",
+    "\n",
+    "for cluster in sw_clusters_bigger:\n",
+    "    print(cluster.address_count())\n",
+    "    for address in cluster.addresses.to_list():\n",
+    "        print(address)"
    ]
   }
  ],
