--- a/Notebooks/Clusters.ipynb
+++ b/Notebooks/Clusters.ipynb
@@ -26,31 +26,7 @@
     "    return chain.range(date)[0].height\n",
     "\n",
     "def get_block_height_range(start: str, end: str) -> Tuple[int, int]:\n",
-    "    return get_block_height_for_date(start), get_block_height_for_date(end)\n",
-    "\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "\n",
-    "def compute_log_log_graph(ww2, ww1, sw, tag, name):\n",
-    "    cluster_sizes = np.array(list(map(lambda c: c.address_count(), arr)))\n",
-    "    bins = np.logspace(np.log10(cluster_sizes.min()), np.log10(cluster_sizes.max()), num=50)\n",
-    "    hist, bin_edges = np.histogram(cluster_sizes, bins=bins)\n",
-    "    hist = np.where(hist == 0, np.nan, hist)\n",
-    "    bin_centers = (bin_edges[:-1] + bin_edges[1:]) / 2\n",
-    "    \n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    plt.plot(bin_centers, hist, marker='o')\n",
-    "    plt.xscale('log')\n",
-    "    plt.yscale('log')    \n",
-    "    plt.title(name)\n",
-    "    plt.xlabel('Cluster Size')\n",
-    "    plt.ylabel('Frequency')\n",
-    "    \n",
-    "    plt.grid(True, which=\"both\", ls=\"--\", linewidth=0.5)\n",
-    "    plt.savefig(f\"/mnt/blocksci/{tag}.png\")\n",
-    "    plt.show()\n"
+    "    return get_block_height_for_date(start), get_block_height_for_date(end)"
    ]
   },
   {
@@ -685,7 +661,9 @@
   {
    "cell_type": "markdown",
    "id": "5c465721-7910-4c3b-97ec-40624a66a4ec",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Loading"
    ]
@@ -1064,7 +1042,9 @@
   {
    "cell_type": "markdown",
    "id": "d93518dc-1f7a-4b7e-96fa-8fb9783a2b48",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Different k\n",
     "\n",
@@ -1234,90 +1214,6 @@
     "plot_label_cluster_graph_interactions_hops(ww1_tagged_clusters1, ww1_tagged_clusters2, \"WW1\")\n",
     "plot_label_cluster_graph_interactions_hops(ww2_tagged_clusters1, ww2_tagged_clusters2, \"WW2\")\n",
     "plot_label_cluster_graph_interactions_hops(sw_tagged_clusters1, sw_tagged_clusters2, \"SW\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3fa79956-6183-4a17-a100-3669c90b40ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "bc1qm2lp5dp08p34ul66d582qkfcyq9ceejhs0jpk0\n",
-      "bc1q8a7ls4p6qvk0ngxzdp6s3yjwkw7kmzktqgxzp4\n",
-      "bc1qdnfjqszu7c59pygyvchlkyu974c98nlxwm24ly\n",
-      "2\n",
-      "1MQwQcwBSEFwp4mqDDEf4w7WkTzhVsN85Y\n",
-      "bc1qml5hl6jp32z06728m2eculcsj2vayaevnpx58w\n",
-      "2\n",
-      "bc1qagslujfkynchcfzvw9uypwegupq7st9dezlaa2\n",
-      "bc1q4t65jqh5tdfvvh8xlgz2vye8lnn3ydk07shhht\n",
-      "26\n",
-      "bc1qwt3hg2pdlvcmgdalckkxvps64kep7dk3698mnc\n",
-      "bc1q9zf2r4zg4le9ayhsu2k2c3qvq28g0nlkf3x6fl\n",
-      "bc1qarcyn65x00zxjjd6uy9y4qrmzw98z2ujfx9l63\n",
-      "bc1qchnr6dayskle8hq65mmsgqk82kgpz3uz038a83\n",
-      "bc1qacwfle8a54dgrdrg09kmutyfamprztrswks40e\n",
-      "bc1q4pnuk2pqfk27jzk9q8x2hsq9k0sq8kcnv2cefv\n",
-      "bc1qcnzql8fx4mgw7q4g9peq90egvntd79qmkzfn82\n",
-      "bc1qkj0awjna9caq7aee2s592aqj8dp2700nyfypw0\n",
-      "bc1qef7xag9elsxwhu00y20maqajkkkk0pshx7j97d\n",
-      "bc1qf3ffntrtpz86y7jwce56eu3902a496hkp6aep3\n",
-      "bc1qg6fhu8c6newwrzzj5574txn6qzdg35un5ztfme\n",
-      "bc1qyfprf45hpj7utjfdcpzp5m2wwekc44sjr2qp34\n",
-      "bc1qvngqxhvcdnwehn4c4922l09yp083s5h7fkkd4q\n",
-      "bc1qdgzn3vl6mmr4ch9en7emc9hdd9zy3vf9r59wk5\n",
-      "bc1qarhzrs9578pau7vqlpe92ntqxjppcy5hqwdmhf\n",
-      "bc1qr9wnaxl8pzd3krf7cedd9we96utkp5dkwsaude\n",
-      "bc1q6474pr6xmcrkce54esv6dtnjst7a7qf9xr33q4\n",
-      "bc1qpxq8z59gfsq3xd95q3w223r873m9tt6vyjp5e9\n",
-      "bc1qfnwcp744wmct97wffnjgyqjg9zgmchu4ekjt94\n",
-      "bc1q6tvphnhp3p4qhslzxtzfvdzlkgarnppuzatrcq\n",
-      "bc1qpzqghm7xsy9xpyhz0cmtufzcheln8duhf272xp\n",
-      "bc1q95qh7gg3dpk3yxs77az7s44c7ylry6r6cvyg9f\n",
-      "bc1qdlncj4vs9mrdj09t9q5ahxnv9v0nzcrd0wqkzh\n",
-      "bc1q3llj906qdxzue89rsv9xfhnzdeln7w6qypcljv\n",
-      "bc1q6srzfr9wvndwj0ned2t9tz84yqxyn58e3zl8jw\n",
-      "bc1q4zags0w4cmugr8xwvtkdf3slt0wxdhgzyay3ah\n",
-      "3\n",
-      "bc1qcmm43pl5fekesadvw5cwl3dvqwcdnyxs8wvt85\n",
-      "bc1qcqrj5e2lfv5jg3fvnlpv5tps4ss8eyc50t74dv\n",
-      "bc1qm7z8avps2dhua22ps2jauu5ma7v5l2zx44jzgs\n",
-      "2\n",
-      "bc1q0zw75qxr76c4ry5s237dec0qn0cllfc0easg57\n",
-      "bc1qfcev9v5f9zuchr273h0cta5kj094092dasxwkl\n",
-      "2\n",
-      "13oBQztvBx8jdqcB71DEbvWNNf4tnjZrqD\n",
-      "bc1qr6kpg2hkxp96a3ex8jlylqsju4j3xewzj2z4hx\n",
-      "2\n",
-      "bc1ql8rvy9ng2fy40wtr8s3t7nk43xu2yqj32kx097\n",
-      "bc1qrycrp6j6f79yrju8dpxujmrz8hvxln2dtv3pv7\n",
-      "7\n",
-      "bc1qvqmafl6856qx4d07vx5sc5jetatjh63fsuj02w\n",
-      "bc1q46e4el7g9av3l0l66yhm6ja3a9prdtyv7hyfha\n",
-      "bc1qchfhkh7am0uwlh343lrrm0pwl4f36ltzfpua83\n",
-      "bc1quz9rgzzcafq4x5wdnzmc6ed9c7zwmcm575jcy3\n",
-      "bc1qwgq4mlne2aeagdxy4dvrpxj259asulc955ad0n\n",
-      "bc1q5c0udyc5wnpgyc6fmjdknlgdprgepqn7080uhm\n",
-      "bc1qdqjn6xwymjda0n86wyskt5drlshqauvpesuu66\n",
-      "2\n",
-      "bc1qk8n98229u36z0fl6h2f4ah7qfqurgkdh9g20af\n",
-      "bc1qalmhq3lf6wfz2q8qzhlhaljt40nhsqz5jqq82p\n"
-     ]
-    }
-   ],
-   "source": [
-    "wp_clusterer = blocksci.cluster.CoinjoinClusterManager(\"/mnt/anal/clustering/whirlpool_1hops/\", chain)\n",
-    "sw_clusters_bigger = [cluster for cluster in wp_clusterer.clusters() if cluster.address_count() > 1]\n",
-    "\n",
-    "for cluster in sw_clusters_bigger:\n",
-    "    print(cluster.address_count())\n",
-    "    for address in cluster.addresses.to_list():\n",
-    "        print(address)"
    ]
   }
  ],
